changes styling table odd in table striped class

--- a/src/addAdmin.html
+++ b/src/addAdmin.html
@@ -58,7 +58,12 @@
               </li>
               <li class="nav-link active">
                 <a href="admin.html" class="d-block p-2"
-                  ><i class="fa-solid fa-user-cog"></i> Admin</a
+                  ><i class="fa-solid fa-user"></i> Admin</a
+                >
+              </li>
+              <li class="nav-link">
+                <a href="roleManagement.html" class="d-block p-2"
+                  ><i class="fa-solid fa-user-cog"></i> Management Role</a
                 >
               </li>
             </ul>
