--- a/src/addEbook.html
+++ b/src/addEbook.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Edit - Artikel</title>
+    <title>Add - Artikel</title>
   </head>
   <body style="background-color: #f9f9f9">
     <!-- link bootstrap css -->
@@ -95,7 +95,7 @@
               <h5 class="fw-bold mb-4 fs-4">E - Book</h5>
               <div class="d-flex gap-4">
                 <div class="bg-white p-4 w-75">
-                  <h6 class="fw-bold mb-1 fs-5">Edit E - Book</h6>
+                  <h6 class="fw-bold mb-1 fs-5">Add New E - Book</h6>
                   <p class="text-black-50 text-light">
                     Please provide details of this product.
                   </p>
