--- a/src/admin.html
+++ b/src/admin.html
@@ -58,7 +58,12 @@
               </li>
               <li class="nav-link active">
                 <a href="admin.html" class="d-block p-2"
-                  ><i class="fa-solid fa-user-cog"></i> Admin</a
+                  ><i class="fa-solid fa-user"></i> Admin</a
+                >
+              </li>
+              <li class="nav-link">
+                <a href="roleManagement.html" class="d-block p-2"
+                  ><i class="fa-solid fa-user-cog"></i> Management Role</a
                 >
               </li>
             </ul>
@@ -96,7 +101,11 @@
               <li><a href="#" id="adminApi">Admin User API</a></li>
             </ul>
             <div class="justify-content-end text-end">
-              <a href="#" class="rounded-1 px-4 btn btn-outline-primary">Add</a>
+              <a
+                href="addAdmin.html"
+                class="rounded-1 px-4 btn btn-outline-primary"
+                >Add</a
+              >
             </div>
             <div class="d-block" id="cmsDiv">
               <table
@@ -359,11 +368,7 @@
                           >
                             Cancel
                           </button>
-                          <a
-                            type="button"
-                            href="addAdmin.html"
-                            class="btn btn-primary"
-                          >
+                          <a type="button" href="#" class="btn btn-primary">
                             Save
                           </a>
                         </div>
