--- a/src/editArtikel.html
+++ b/src/editArtikel.html
@@ -58,7 +58,12 @@
               </li>
               <li class="nav-link">
                 <a href="admin.html" class="d-block p-2"
-                  ><i class="fa-solid fa-user-cog"></i> Admin</a
+                  ><i class="fa-solid fa-user"></i> Admin</a
+                >
+              </li>
+              <li class="nav-link">
+                <a href="roleManagement.html" class="d-block p-2"
+                  ><i class="fa-solid fa-user-cog"></i> Management Role</a
                 >
               </li>
             </ul>
@@ -190,6 +195,12 @@
                         >
                           <i class="fa-solid fa-list-check"></i>
                         </button>
+                        <button
+                          type="button"
+                          class="btn btn-link text-black-50 text-decoration-none"
+                        >
+                          <i class="fa-solid fa-image"></i>
+                        </button>
                       </div>
                       <div
                         contenteditable="true"
@@ -204,6 +215,32 @@
                   <div class="mt-4">
                     <div class="mb-1">
                       Upload Image <span class="text-danger">*</span>
+                    </div>
+                    <div class="card-body">
+                      <div
+                        id="dropZone"
+                        class="mb-3"
+                        ondragover="handleDragOver(event)"
+                        ondragleave="handleDragLeave(event)"
+                        ondrop="handleDrop(event)"
+                      >
+                        <p class="mb-0 mt-5">
+                          <i class="fas fa-cloud-upload-alt fa-3x"></i><br />
+                          Drop here to attach or upload
+                        </p>
+                        <input
+                          type="file"
+                          id="fileInput"
+                          accept="image/*"
+                          style="display: none"
+                        />
+                      </div>
+                      <p class="text-muted mb-0">Max size: 10 MB</p>
+                    </div>
+                  </div>
+                  <div class="mt-4">
+                    <div class="mb-1">
+                      Upload Thumbnail <span class="text-danger">*</span>
                     </div>
                     <div class="card-body">
                       <div
